Item Descriptions on first obtain
Survive poison on overworld
Custom gender boxes
Default fast text speed
Shred animation
Better AI switching
3.6kb more storage available for saving
Repeatable medicine
Champion switched to Steven
	- Rematch 8th gym leader Wallace (buffed team as well for rematches)
Mawile as intro pokemon
Remove low HP sounds
Trade with FRLG before becoming champion
Shuckle can make juice
Disregard eggs in nurse
Swap keyboard to lowercase
Colored natures
1 Premier ball for every 10 pokeballs
Infinite TMs
Run indoors
Remove extra save confirmation
Disable Union room
Better white out money cals
Faster HP downage
Better reflection system
Optimize summary screen
Better Vsync
Fix camera waves
Fix snow weather
Fix jumping to ground from water effect
Wrapping summary screen
Make Glacias team more diverse
Add Elite 4 weather
More available wild fire pokemon (Houndour, Growlithe, and Magby)
Add Deoxys to Altering Cave