@@ -33,3 +33,4 @@ Make Glacias team more diverse
 Add Elite 4 weather
 More available wild fire pokemon (Houndour, Growlithe, and Magby)
 Add Deoxys to Altering Cave
+Add nicknaming to party menu
